fix(tables): fixed word wrap (iss1791) (#1928)
* fix(tables): fixed word wrap (iss1791)

* fix(table): word wrap now correct (iss1791)

--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -143,6 +143,10 @@
   width: 100%;
   background-color: var(--pf-c-table--BackgroundColor);
 
+  td {
+    word-break: break-word;
+  }
+
   // Standard table row (non-expandable)
   // exclude expandable rows
   tr:not(.pf-c-table__expandable-row) {
